test/spec/store_retval.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/store_retval.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:2:11: type stack size too small at function. got 0, expected at least 1
  (module (func (param i32) (result i32) (set_local 0 (i32.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:2:11: type stack at end of function is 0. expected 1
  (module (func (param i32) (result i32) (set_local 0 (i32.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:6:11: type stack size too small at function. got 0, expected at least 1
  (module (func (param i64) (result i64) (set_local 0 (i64.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:6:11: type stack at end of function is 0. expected 1
  (module (func (param i64) (result i64) (set_local 0 (i64.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:10:11: type stack size too small at function. got 0, expected at least 1
  (module (func (param f32) (result f32) (set_local 0 (f32.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:10:11: type stack at end of function is 0. expected 1
  (module (func (param f32) (result f32) (set_local 0 (f32.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:14:11: type stack size too small at function. got 0, expected at least 1
  (module (func (param f64) (result f64) (set_local 0 (f64.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:14:11: type stack at end of function is 0. expected 1
  (module (func (param f64) (result f64) (set_local 0 (f64.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:19:22: type stack size too small at function. got 0, expected at least 1
...y 1) (func (param i32) (result i32) (i32.store (i32.const 0) (i32.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:19:22: type stack at end of function is 0. expected 1
...y 1) (func (param i32) (result i32) (i32.store (i32.const 0) (i32.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:23:22: type stack size too small at function. got 0, expected at least 1
...y 1) (func (param i64) (result i64) (i64.store (i32.const 0) (i64.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:23:22: type stack at end of function is 0. expected 1
...y 1) (func (param i64) (result i64) (i64.store (i32.const 0) (i64.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:27:22: type stack size too small at function. got 0, expected at least 1
...y 1) (func (param f32) (result f32) (f32.store (i32.const 0) (f32.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:27:22: type stack at end of function is 0. expected 1
...y 1) (func (param f32) (result f32) (f32.store (i32.const 0) (f32.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:31:22: type stack size too small at function. got 0, expected at least 1
...y 1) (func (param f64) (result f64) (f64.store (i32.const 0) (f64.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:31:22: type stack at end of function is 0. expected 1
...y 1) (func (param f64) (result f64) (f64.store (i32.const 0) (f64.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:36:22: type stack size too small at function. got 0, expected at least 1
... 1) (func (param i32) (result i32) (i32.store8 (i32.const 0) (i32.const 1))))
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:36:22: type stack at end of function is 0. expected 1
... 1) (func (param i32) (result i32) (i32.store8 (i32.const 0) (i32.const 1))))
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:40:22: type stack size too small at function. got 0, expected at least 1
...1) (func (param i32) (result i32) (i32.store16 (i32.const 0) (i32.const 1))))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:40:22: type stack at end of function is 0. expected 1
...1) (func (param i32) (result i32) (i32.store16 (i32.const 0) (i32.const 1))))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:44:22: type stack size too small at function. got 0, expected at least 1
... 1) (func (param i64) (result i64) (i64.store8 (i32.const 0) (i64.const 1))))
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:44:22: type stack at end of function is 0. expected 1
... 1) (func (param i64) (result i64) (i64.store8 (i32.const 0) (i64.const 1))))
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:48:22: type stack size too small at function. got 0, expected at least 1
...1) (func (param i64) (result i64) (i64.store16 (i32.const 0) (i64.const 1))))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:48:22: type stack at end of function is 0. expected 1
...1) (func (param i64) (result i64) (i64.store16 (i32.const 0) (i64.const 1))))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:52:22: type stack size too small at function. got 0, expected at least 1
...1) (func (param i64) (result i64) (i64.store32 (i32.const 0) (i64.const 1))))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:52:22: type stack at end of function is 0. expected 1
...1) (func (param i64) (result i64) (i64.store32 (i32.const 0) (i64.const 1))))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
out/third_party/testsuite/store_retval.wast:2: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001e: end_function_body callback failed
out/third_party/testsuite/store_retval.wast:6: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000001e: end_function_body callback failed
out/third_party/testsuite/store_retval.wast:10: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000021: end_function_body callback failed
out/third_party/testsuite/store_retval.wast:14: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000025: end_function_body callback failed
out/third_party/testsuite/store_retval.wast:19: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000026: end_function_body callback failed
out/third_party/testsuite/store_retval.wast:23: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000026: end_function_body callback failed
out/third_party/testsuite/store_retval.wast:27: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000029: end_function_body callback failed
out/third_party/testsuite/store_retval.wast:31: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x0000002d: end_function_body callback failed
out/third_party/testsuite/store_retval.wast:36: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000026: end_function_body callback failed
out/third_party/testsuite/store_retval.wast:40: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000026: end_function_body callback failed
out/third_party/testsuite/store_retval.wast:44: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000026: end_function_body callback failed
out/third_party/testsuite/store_retval.wast:48: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000026: end_function_body callback failed
out/third_party/testsuite/store_retval.wast:52: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000026: end_function_body callback failed
13/13 tests passed.
;;; STDOUT ;;)
